# agentic_langgraph

./: .gitignore  1_basic_flow_single_input.ipynb  4_conditional_graph.ipynb  6_chat_bot_agent.py  9_react_agent.ipynb  LICENSE  Readme.md  basic_flow_multiple_inputs.ipynb  basic_flow_single_input.ipynb  mcp_notes_ru.ipynb  notes.ipynb  notes_ru.ipynb  pyproject.toml  requirements.txt
notebooks/: 10_agentic_rag_system.py  2_basic_flow_multiple_inputs.ipynb  3_sequential_graph.ipynb  4.1_conditional_graph.ipynb  5_looping_graph.ipynb  6_chat_bot_agent.ipynb  7_chat_bot_agent_memory.ipynb  8_chat_bot_agent_memory_db.ipynb  9_react_agent.ipynb
