[project]
name = "langgraph-projects"
version = "0.1.0"
description = "LangGraph experiments and agentic workflows"
requires-python = ">=3.11,<3.14"

dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.1",
    "mypy>=1.11.1",
]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "I",
    "D",
    "D401",
    "UP",
]

lint.ignore = [
    "T201",
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
    "D101",
    "D103",
    "D202",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"